--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 				<script src="donation.js"></script>
 				<select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
-				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Greek</option>
+				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Ελληνικά'>Greek</option>
 				</select>
 			</div>
 	</nav>
