--- a/about_us.html
+++ b/about_us.html
@@ -16,7 +16,7 @@
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
-		</a>	
+		</a>
 			<div class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
@@ -24,6 +24,9 @@
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
+				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
 				<select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
@@ -32,7 +35,7 @@
 	</nav>
 	<hr id="navBarLine">
     <div>
-        
+
 		<div class="col-md-4" id="tips">
             <h1>About us</h1>
             <br><br>
@@ -42,7 +45,7 @@
 				Ut commodo commodo rhoncus. Pellentesque erat sem, pretium non rutrum ac, eleifend quis est. Mauris viverra elementum ex, nec semper urna blandit in. Mauris euismod sagittis nulla. Pellentesque eu maximus ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus gravida velit a facilisis tincidunt. Suspendisse viverra pulvinar tincidunt. Praesent ullamcorper faucibus nibh, id bibendum neque. Cras porttitor ipsum eget blandit dignissim. Sed eget nisi viverra, pretium leo tempus, malesuada turpis. In hac habitasse platea dictumst. In mi odio, pulvinar sit amet nulla eu, pellentesque varius justo. Sed lacinia fermentum ipsum quis pharetra.
 				Vivamus molestie lectus quis tempus aliquet. In quis nunc dui. Nam non ligula in mauris suscipit vestibulum sed eget massa. Morbi egestas lacinia ligula, nec fringilla augue dictum id. Phasellus leo ipsum, venenatis ut dui eget, interdum congue tortor. Cras congue enim orci, sit amet pretium ligula fermentum id. Pellentesque ac fringilla neque. Fusce luctus tortor sit amet nibh consectetur cursus. Quisque leo nibh, ornare lobortis ullamcorper in, feugiat non neque. Etiam eu gravida neque. Nam pharetra arcu aliquam iaculis condimentum.
 			</p>
-		</div>     
+		</div>
 		<div class="col-md-6">
             <img src="non-profit.jpg" id="nonProfit" width="550px" height="500px" />
         </div>
