--- a/contact_us.html
+++ b/contact_us.html
@@ -16,7 +16,7 @@
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
-		</a>	
+		</a>
 			<div class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
@@ -24,7 +24,10 @@
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
-				<select class="selectpicker" data-width="fit">
+        <a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+        <select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
 				</select>
@@ -32,7 +35,7 @@
 	</nav>
 	<hr id="navBarLine">
     <div>
-        
+
 		<div class="col-md-4" id="tips">
             <h1>Contact us</h1>
             <div id="contacUs">
@@ -61,9 +64,9 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </div>
-            
-		</div>         
-		<div class="col-md-6" id="maps"> 
+
+		</div>
+		<div class="col-md-6" id="maps">
             <img src="googleMaps.PNG" />
             <!--EDO EXEI KANONIKO MAPS ALLA DEN DOULEUEI AKOMA
             <div id="googleMap" style="width:100%;height:500px;width: 500px;"></div>
