--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
-		</a>	
+		</a>
 			<div class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
@@ -24,6 +24,9 @@
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
+				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
 				<select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
@@ -47,10 +50,10 @@
 				<li>Do stock up on food and medicine.</li>
 				<br>
 				<li>Check in with friends and family.</li>
-			</ol>	
+			</ol>
 		</div>
 		<div class="col-md-2"></div>
-		<div class="col-md-3"> 
+		<div class="col-md-3">
 			<img src="backGroundWallpaper.jpg" width="780" height="520"/>
 		</div>
 	</div>
