--- a/about_usGr.html
+++ b/about_usGr.html
@@ -18,12 +18,15 @@
 			</div>
 		</a>
 			<div class="subnav">
-				<<div id="home"> <a href="IndexGr.html">Αρχική</a> </div>
+				<div id="home"> <a href="IndexGr.html">Αρχική</a> </div>
 				<div id="events"> <a href="eventsGr.html">Εκδηλώσεις</a></div>
 				<div id="donation"> <a href="donation_pageGr.html">Δωρεές</a></div>
 				<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
 				<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
 				<script src="donation.js"></script>
+				<a id="facebookButton" href="https://el-gr.facebook.com/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/login?lang=el"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
 				<select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
