--- a/donation_page.html
+++ b/donation_page.html
@@ -16,7 +16,7 @@
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
-		</a>	
+		</a>
 			<div class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
@@ -24,7 +24,10 @@
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
-				<select class="selectpicker" data-width="fit">
+        <a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+        <select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
 				</select>
@@ -33,7 +36,7 @@
 	<hr id="navBarLine">
     <div class="row "id="pageWallpaper">
         <div class="col-md-4" id="tips">
-            <h1>Give us your help</h1>    
+            <h1>Give us your help</h1>
 			<form class="needs-validation" novalidate>
                 <div class="form-row">
                   <div class="col-md-4 mb-3">
@@ -99,7 +102,7 @@
                 </div>
                 <button class="btn btn-primary" type="submit">Submit dination/button>
               </form>
-              
+
               <script>
               // Example starter JavaScript for disabling form submissions if there are invalid fields
               (function() {
@@ -121,7 +124,7 @@
               })();
               </script>
 		</div>
-		<div class="col-md-4"> 
+		<div class="col-md-4">
 			<img id="donationWallpaper" src="donationWallpaper.jpg" width="920" height="620"/>
 		</div>
     </div>
