--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
-		</a>	
+		</a>
 			<div class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
@@ -24,16 +24,19 @@
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
-				<select class="selectpicker" data-width="fit">
+                <a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+                <select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
 				</select>
 			</div>
 	</nav>
 	<hr id="navBarLine">
-    
+
         <div class="col-md-4" id="tips">
-            <h1 id="eventsHeader">Events!</h1> 
+            <h1 id="eventsHeader">Events!</h1>
             <br><br>
             <div class="container">
                 <div class="row">
@@ -111,7 +114,7 @@
                 </div>
             </div>
 
-        </div>	
+        </div>
         <img id="stayHome" src="stayHome.jpg" alt="420" width="500px" height="350px"/>
         <br>
         <br>
@@ -124,7 +127,7 @@
             <a href="#" class="list-group-item list-group-item-action">...</a>
             <a href="#" class="list-group-item list-group-item-action disabled">...</a>
           </div>
-          
+
     <br><br><br><br>
     <footer class="footerDonationPage">Copyright by: <cite title="Source Title"> Nikiforos Ioannidis</cite></footer>
 </body>
