--- a/eventsGr.html
+++ b/eventsGr.html
@@ -24,7 +24,10 @@
 				<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
 				<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
 				<script src="donation.js"></script>
-				<select class="selectpicker" data-width="fit">
+                <a id="facebookButton" href="https://el-gr.facebook.com/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/login?lang=el"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+                <select class="selectpicker" data-width="fit">
 					<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
 				</select>
