--- a/IndexGr.html
+++ b/IndexGr.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Αντιμετωπίζουμε τον Κορωνοϊό (COVID-19)</title>
+	<title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="donation.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </head>
 <body>
 	<nav class="navbar">
@@ -24,49 +28,46 @@
 				<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
 				<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
 				<script src="donation.js"></script>
-				<a id="facebookButton" href="https://el-gr.facebook.com/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
-				<a id="twitterButton" href="https://twitter.com/login?lang=el"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
 				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
-				<select class="selectpicker" data-width="fit">
-					<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
-					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
+				<select class="selectpicker" data-width="fit" onchange="location = this.value;">
+				 	<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
+ 	                <option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
 				</select>
 			</div>
 	</nav>
 	<hr id="navBarLine">
 	<div class="row "id="pageWallpaper">
-		<div class="col-md-3" id="tips">
-			<h3>Συμβουλές Προστασίας</h3>
-			<img src="alert.jpeg" width="380" height="220"/>
-			<ol>
-				<li>Πλένετε τα χέρια σας συχνά.</li>
-				<br>
-				<li>Ακουμπάτε λίγοτερο το πρόσωπό σας.</li>
-				<br>
-				<li>Κρατάτε αποστάσεις ασφαλείας.</li>
-				<br>
-				<li>Μην επαναχρησιμοποιείτε τις μάσκες.</li>
-				<br>
-				<li>Κρατήστε προμήθειες σε τρόφιμα και φάρμακα.</li>
-			</ol>
+		<div class="col-md-6">
+			<p id="text">Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
+				Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες.
+			</p>
+			<p id="text2">Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
+				Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
+				Ξενοφοβία και ρατσισμός κατά των ανθρώπων κινεζικής και ανατολικής ασιατικής καταγωγής έχουν σημειωθεί λόγω της επιδημίας, τροφοδοτώντας τον φόβο και την εχθρότητα σε διάφορες χώρες. Παραπληροφόρηση που διαδόθηκε κυρίως στο διαδίκτυο σχετικά με τον κορωνοϊό, οδήγησε την ΠΟΥ να κηρύξει "πληροφοριοδημία" (αγγλικά: infodemic) στις 2 Φεβρουαρίου
+			</p>
 		</div>
-		<div class="col-md-2"></div>
-		<div class="col-md-3">
+		<div class="col-md-6">
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-				<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+					<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
 				</div>
 				<div class="carousel-item">
-				<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+					<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
 				</div>
 				<div class="carousel-item">
-				<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
+					<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -79,15 +80,15 @@
 			</a>
 			</div>
 		</div>
+		<div class="col-md-3" id="tips2">
+			<h2><u>Συμβουλές προστασίας</u></h2>
+				<h5>Πλένετε καλά τα χέρια σας.</h5>
+				<h5>Μην αγγίζετε το προσωπό σας συχνά.</h5>
+				<h5>Τηρείτε τις αποστάσεις ασφαλείας.</h5>
+				<h5>Μην επαναχρησιμοποιείτε μάσκες.</h5>
+		</div>
 	</div>
-	<p id="text">Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 15 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 169.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 6.500 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων απο 3.300 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 76.000 άνθρωποι.
-		Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες. Τα συμπτώματα μπορεί να περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Οι επιπλοκές μπορεί να περιλαμβάνουν πνευμονία και σύνδρομο οξείας αναπνευστικής δυσχέρειας. Δεν υπάρχει ακόμα εμβόλιο ή ειδική αντιική θεραπεία (αν και η έρευνα βρίσκεται σε εξέλιξη). Οι προσπάθειες συνήθως στοχεύουν στη διαχείριση των συμπτωμάτων και της υποστηρικτικής θεραπείας.
-		Οι επαγγελματίες δημόσιας υγείας τόνισαν τη σημασία των βασικών πρακτικών υγιεινής στην πρόληψη της μόλυνσης και εξέδωσαν προτεινόμενες κατευθυντήριες οδηγίες συμπεριφοράς για άτομα που είναι ύποπτα ότι έχουν τον ιό. Το πλύσιμο των χεριών, η διατήρηση της απόστασης άνω των 2 μέτρων από ανθρώπους που βήχουν και η αποφυγή επαφής με το πρόσωπο συνιστώνται για την πρόληψη της νόσου. Οποιοσδήποτε είναι ύποπτος για τη μεταφορά του ιού, συνιστάται να παρακολουθεί την υγεία του για δύο εβδομάδες, να φοράει χειρουργική μάσκα και να ζητά ιατρική συμβουλή, καλώντας έναν γιατρό πριν επισκεφτεί μια κλινική.
-		Η περίοδος επώασης (χρόνος από την έκθεση έως την έναρξη των συμπτωμάτων) κυμαίνεται από 2 έως 14 ημέρες, αλλά μπορεί να είναι μεταδοτική κατά τη διάρκεια αυτής της περιόδου και μετά την αποκατάσταση. Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία έκλεισαν σε εθνικό επίπεδο σε 22 κράτη και τοπικά σε 17 χώρες, επηρεάζοντας πάνω από 370 εκατομμύρια μαθητές.
-		Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
-	</p>
+	<br><br><br><br>
 	<footer class="footer">Copyright by: <cite title="Source Title">Νικηφόρος Ιωαννίδης</cite></footer>
 </body>
 </html>
-
-
