--- a/about_usGr.html
+++ b/about_usGr.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>About us</title>
+	<title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="donation.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </head>
 <body>
 	<nav class="navbar">
@@ -17,28 +21,30 @@
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
 		</a>
-			<div class="subnav">
-				<div id="home"> <a href="IndexGr.html">Αρχική</a> </div>
-				<div id="events"> <a href="eventsGr.html">Εκδηλώσεις</a></div>
-				<div id="donation"> <a href="donation_pageGr.html">Δωρεές</a></div>
-				<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
-				<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
-				<script src="donation.js"></script>
-				<a id="facebookButton" href="https://el-gr.facebook.com/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
-				<a id="twitterButton" href="https://twitter.com/login?lang=el"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
-				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
-				<select class="selectpicker" data-width="fit">
-					<option data-content='<span class="flag-icon flag-icon-gr"></span> Greek'>Ελληνικά</option>
-					<option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
-				</select>
-			</div>
+		<div class="subnav">
+			<div id="home"> <a href="IndexGr.html">Αρχική</a> </div>
+			<div id="events"> <a href="eventsGr.html">Εκδηλώσεις</a></div>
+			<div id="donation"> <a href="donation_pageGr.html">Δωρεές</a></div>
+			<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
+			<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
+			<script src="donation.js"></script>
+			<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
+			<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
+			<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+			<select class="selectpicker" data-width="fit" onchange="location = this.value;">
+				 <option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="about_usGr.html">Ελληνικά</option>
+				 <option data-content='<span class="flag-icon flag-icon-us"></span> English' value="about_us.html">English</option>
+			</select>
+		</div>
 	</nav>
 	<hr id="navBarLine">
     <div>
-
-		<div class="col-md-4" id="tips">
+		<div class="col-md-4" id="aboutUsHeader">
             <h1>Σχετικά με εμάς</h1>
-            <br><br>
+			<br><br>
+		</div>
+		<div id="aboutUsText2">
+			<br><br>
             <h4><i>"Είμαστε ένας μη κερδοσκοπικός οργανισμός και προσπαθούμε να συλλέξουμε πόρους για ανρθώπους που βρίσκονται σε ανάγκη!"</i></h4>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac ligula luctus, varius enim id, vestibulum nisi. Phasellus blandit ligula sed leo fringilla, nec lobortis neque sagittis. Nulla nisl ipsum, varius a consequat sed, mollis et justo. Sed rhoncus eros ac mollis dapibus. Mauris sed posuere ex. Pellentesque vulputate, leo at sodales volutpat, odio metus tristique lacus, vel finibus elit lorem vel nibh. Cras aliquam tortor felis, eu eleifend purus molestie et.
@@ -46,11 +52,16 @@
 				Vivamus molestie lectus quis tempus aliquet. In quis nunc dui. Nam non ligula in mauris suscipit vestibulum sed eget massa. Morbi egestas lacinia ligula, nec fringilla augue dictum id. Phasellus leo ipsum, venenatis ut dui eget, interdum congue tortor. Cras congue enim orci, sit amet pretium ligula fermentum id. Pellentesque ac fringilla neque. Fusce luctus tortor sit amet nibh consectetur cursus. Quisque leo nibh, ornare lobortis ullamcorper in, feugiat non neque. Etiam eu gravida neque. Nam pharetra arcu aliquam iaculis condimentum.
 			</p>
 		</div>
-		<div class="col-md-6">
-            <img src="non-profit.jpg" id="nonProfit" width="550px" height="500px" />
-        </div>
+	</div>
+	<div class="col-md-6">
+		<img src="non-profit.jpg" id="nonProfit" width="550px" height="500px" />
+	</div>
     </div>
-    <br><br><br>
-    <footer class="footer">Copyright by: <cite title="Source Title">Νικηφόρος Ιωαννίδης</cite></footer>
+    <br><br><br><br><br><br><br><br>
+    <footer class="footerDonationPage">Copyright by: <cite title="Source Title"> Nikiforos Ioannidis</cite></footer>
 </body>
 </html>
+
+
+
+
