--- a/Index.html
+++ b/Index.html
@@ -13,82 +13,121 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-dark bg-dark sticky-top">
-		<a class="navbar-brand" href="#">
-			<img id="logo" src="logo.jpg" />
-			<div class="coronovirus">
-				<h3>FIGHT <br> Coronavirus</h3>
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+		<ul class="navbar mr-auto">
+			<a class="navbar-brand" href="#">
+				<img id="logo" src="logo.png"/>
+			</a>
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarMenu">
+				<ul class="navbar-nav mr-auto">
+					<div class="nav-item">
+						<a href="Index.html" class="nav-link">Home</a>
+					</div>
+					<div class="nav-item">
+						<a href="events.html" class="nav-link">Events</a>
+					</div>
+					<div class="nav-item">
+					<a href="donation_page.html" class="nav-link">Donation</a>
+					</div>
+					<div class="nav-item">
+						<a href="about_us.html" class="nav-link">About us</a>
+					</div>
+						<a href="contact_us.html" class="nav-link">Contact us</a>
+					</div>
+				</ul>
 			</div>
-		</a>
-			<span class="subnav">
-				<div id="home"> <a href="Index.html">Home</a> </div>
-				<div id="events"> <a href="events.html">Events</a></div>
-				<div id="donation"> <a href="donation_page.html">Donation</a></div>
-				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
-				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
-				<script src="donation.js"></script>
-				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></i></a><br>
-				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a><br>
-				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a><br>
-				<select class="selectpicker" data-width="fit" onchange="location = this.value;">
-					<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
-				 	<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
-				</select>
-			</span>
+		</ul>
+		<div id="buttonsLanguage" class="row">
+			<ul class="navbar mr-auto">
+				<div class="col-md-1">
+					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-3">
+					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
+						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
+						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
+					</select>
+				</div>
+				<div class="offset-1">
+				</div>
+			</div>
+		</ul>
 	</nav>
-	<div class="row "id="pageWallpaper">
+	<div class="row">
 		<div class="col-md-6">
-			<p id="text">The 2019–20 coronavirus pandemic is an ongoing global pandemic of coronavirus disease 2019 (COVID-19) caused by the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The virus was first reported in Wuhan, Hubei, China, in December 2019.On 11 March 2020, the World Health Organization declared the outbreak a pandemic. As of 12 March 2020, over 129,000 cases have been confirmed in more than 120 countries and territories, with major outbreaks in mainland China, Italy, South Korea, and Iran. More than 4,700 have died from the disease and 68,000 have recovered.
+			<p>The 2019–20 coronavirus pandemic is an ongoing global pandemic of coronavirus disease 2019 (COVID-19) caused by the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The virus was first reported in Wuhan, Hubei, China, in December 2019.On 11 March 2020, the World Health Organization declared the outbreak a pandemic. As of 12 March 2020, over 129,000 cases have been confirmed in more than 120 countries and territories, with major outbreaks in mainland China, Italy, South Korea, and Iran. More than 4,700 have died from the disease and 68,000 have recovered.
 				The virus spreads between people in a way similar to influenza, via respiratory droplets from coughing. The time between exposure and symptom onset is typically five days, but may range from two to fourteen days.
 			</p>
-			<p id="text2">Symptoms are most often fever, cough, and shortness of breath. Complications may include pneumonia and acute respiratory distress syndrome. There is currently no vaccine or specific antiviral treatment, but research is ongoing. Efforts are aimed at managing symptoms and supportive therapy. Recommended preventive measures include handwashing, maintaining distance from other people (particularly those who are sick), and monitoring and self-isolation for fourteen days for people who suspect they are infected.
+			<p>Symptoms are most often fever, cough, and shortness of breath. Complications may include pneumonia and acute respiratory distress syndrome. There is currently no vaccine or specific antiviral treatment, but research is ongoing. Efforts are aimed at managing symptoms and supportive therapy. Recommended preventive measures include handwashing, maintaining distance from other people (particularly those who are sick), and monitoring and self-isolation for fourteen days for people who suspect they are infected.
 				Public health responses around the world have included travel restrictions, quarantines, curfews, event cancellations, and school closures. They have included the quarantine of all of Italy and the Chinese province of Hubei; various curfew measures in China and South Korea; screening methods at airports and train stations; and travel advisories regarding regions with community transmission. Schools have closed nationwide in 22 countries or locally in 17 countries, affecting more than 370 million students.
 				Worldwide effects of the pandemic include social and economic instability, xenophobia and racism against people of Chinese and East Asian descent, and the online spread of misinformation and conspiracy theories about the virus.
 			</p>
 		</div>
 		<div class="col-md-6">
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-			</ol>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
+					</div>
 				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
+				<br>
+				<div id="alighCenter">
+					<h2><u>Protection Tips</u></h2>
+					<h5>Wash your hands.</h5>
+					<h5>Try to touch your face less.</h5>
+					<h5>Keep your distance.</h5>
+					<h5>Don’t stockpile masks.</h5>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-			</div>
 		</div>
-		<div class="col-md-3" id="tips">
-			<h2><u>Protection Tips</u></h2>
-				<h5>Wash your hands.</h5>
-				<h5>Try to touch your face less.</h5>
-				<h5>Keep your distance.</h5>
-				<h5>Don’t stockpile masks.</h5>
+	<div class="row" id="footer">
+	<div class="col-md-12">
+		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+			<a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
 		</div>
+		<script src="donation.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</div>
-	<br><br><br><br>
-	<footer class="footer">Copyright by: <cite title="Source Title">Nikiforos Ioannidis</cite></footer>
 </body>
 </html>
+
+
+
