--- a/IndexGr.html
+++ b/IndexGr.html
@@ -13,82 +13,118 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-dark bg-dark sticky-top">
-		<a class="navbar-brand" href="#">
-			<img id="logo" src="logo.jpg" />
-			<div class="coronovirus">
-				<h3>FIGHT <br> Coronavirus</h3>
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+		<ul class="navbar mr-auto">
+			<a class="navbar-brand" href="#">
+				<img id="logo" src="logo.png"/>
+			</a>
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarMenu">
+				<ul class="navbar-nav mr-auto">
+					<div class="nav-item">
+						<a href="IndexGr.html" class="nav-link">Αρχική</a>
+					</div>
+					<div class="nav-item">
+						<a href="eventsGr.html" class="nav-link">Εκδηλώσεις</a>
+					</div>
+					<div class="nav-item">
+					<a href="donation_pageGr.html" class="nav-link">Δωρεά</a>
+					</div>
+					<div class="nav-item">
+						<a href="about_usGr.html" class="nav-link">Σχετικά με εμάς</a>
+					</div>
+						<a href="contact_usGr.html" class="nav-link">Επικοινωνία</a>
+					</div>
+				</ul>
 			</div>
-		</a>
-			<div class="subnav">
-				<div id="home"> <a href="IndexGr.html">Αρχική</a> </div>
-				<div id="events"> <a href="eventsGr.html">Εκδηλώσεις</a></div>
-				<div id="donation"> <a href="donation_pageGr.html">Δωρεές</a></div>
-				<div id="aboutUs"> <a href="about_usGr.html">Σχετικά με εμάς</a></div>
-				<div id="contactUs"> <a href="contact_usGr.html">Επικοινωνία</a></div>
-				<script src="donation.js"></script>
-				<a id="facebookButton2" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></i></a><br>
-				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a><br>
-				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a><br>
-				<select class="selectpicker" data-width="fit" onchange="location = this.value;">
-				 	<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
- 	                <option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
-				</select>
+		</ul>
+		<div id="buttonsLanguage" class="row">
+			<ul class="navbar mr-auto">
+				<div class="col-md-1">
+					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-3">
+					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
+						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
+						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
+					</select>
+				</div>
+				<div class="offset-1">
+				</div>
 			</div>
+		</ul>
 	</nav>
-	<div class="row "id="pageWallpaper">
+	<div class="row">
 		<div class="col-md-6">
-			<p id="text">Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
+			<p>Μια συνεχιζόμενη πανδημία της νόσου του κορονοϊού 2019 (COVID-19), που προκλήθηκε από τον ιό SARS-CoV-2, ξεκίνησε τον Δεκέμβριο του 2019. Αναγνωρίστηκε για πρώτη φορά στην πόλη Ουχάν, πρωτεύουσα της επαρχίας Χουπέι της Κίνας. Ως τις 18 Μαρτίου 2020 έχουν επιβεβαιωθεί πάνω από 200.000 περιπτώσεις, συμπεριλαμβανομένων όλων των επαρχιών της Κίνας και σχεδόν εκατόν σαράντα άλλων χωρών. Έχουν σημειωθεί περισσότεροι από 8.000 θάνατοι που οφείλονται στη νόσο, συμπεριλαμβανομένων περισσότερων από 4.700 εκτός της ηπειρωτικής Κίνας, ξεπερνούν εκείνους της επιδημίας SARS του 2003. Ωστόσο, από τότε έχουν ανακάμψει περισσότεροι από 82.000 άνθρωποι.
 				Η μόλυνση μεταδίδεται κυρίως μέσω της μετάδοσης από άνθρωπο σε άνθρωπο μέσω σταγονιδίων αναπνοής που παράγονται όταν εκπνέουν οι άνθρωποι (όπως φτάρνισμα ή βήχας) σε απόσταση μικρότερη του ενός μέτρου. Ο χρόνος μεταξύ της έκθεσης και της εμφάνισης συμπτωμάτων είναι συνήθως από 2 έως 14 ημέρες.
-			</p>
-			<p id="text2">Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
+			<p>Τα συμπτώματα περιλαμβάνουν πυρετό, βήχα και δυσκολίες στην αναπνοή. Ως τις 5 Φεβρουαρίου 2020 η εκτίμηση του ποσοστού θνησιμότητας ήταν το 2% των επιβεβαιωμένων περιπτώσεων, υψηλότερο μεταξύ εκείνων που απαιτούν εισαγωγή στο νοσοκομείο. Ως τις αρχές Φεβρουαρίου του 2020, δεν υπάρχει εμβόλιο και καμία ειδική θεραπεία. Εξετάζονται αρκετές προσεγγίσεις εμβολίων και αντι-ιικά. Τα σχολεία και πανεπιστήμια έχουν κλείσει σε εθνικό ή τοπικό επίπεδο σε τουλάχιστον 115 χώρες, επηρεάζοντας πάνω από 950 εκατομμύρια μαθητές.
 				Η πανδημία έχει κηρυχθεί από τον Παγκόσμιο Οργανισμό Υγείας (Π.Ο.Υ.) Έκτακτη Ανάγκη Δημόσιας Υγείας Διεθνούς Ενδιαφέροντος (PHEIC), με βάση τις πιθανές επιπτώσεις που θα μπορούσε να έχει ο ιός εάν εξαπλωθεί σε χώρες με ασθενέστερα συστήματα υγειονομικής περίθαλψης. Αυτή η κήρυξη ήταν η έκτη φορά που έχει κληθεί το μέτρο μετά από την πανδημία του H1N1 το 2009.
 				Ξενοφοβία και ρατσισμός κατά των ανθρώπων κινεζικής και ανατολικής ασιατικής καταγωγής έχουν σημειωθεί λόγω της επιδημίας, τροφοδοτώντας τον φόβο και την εχθρότητα σε διάφορες χώρες. Παραπληροφόρηση που διαδόθηκε κυρίως στο διαδίκτυο σχετικά με τον κορωνοϊό, οδήγησε την ΠΟΥ να κηρύξει "πληροφοριοδημία" (αγγλικά: infodemic) στις 2 Φεβρουαρίου
 			</p>
+			</p>
 		</div>
 		<div class="col-md-6">
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-			</ol>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="carousel1.jpg" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
+					</div>
 				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel2.jpg" alt="Second slide">
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel3.jpg" alt="Third slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="carousel4.jpg" alt="Fourth slide">
+				<br>
+				<div id="alighCenter">
+					<h2><u>Συμβουλές προστασίας</u></h2>
+					<h5>Πλένετε καλά τα χέρια σας.</h5>
+					<h5>Μην αγγίζετε το προσωπό σας συχνά.</h5>
+					<h5>Τηρείτε τις αποστάσεις ασφαλείας.</h5>
+					<h5>Μην επαναχρησιμοποιείτε μάσκες.</h5>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-			</div>
 		</div>
-		<div class="col-md-3" id="tips2">
-			<h2><u>Συμβουλές προστασίας</u></h2>
-				<h5>Πλένετε καλά τα χέρια σας.</h5>
-				<h5>Μην αγγίζετε το προσωπό σας συχνά.</h5>
-				<h5>Τηρείτε τις αποστάσεις ασφαλείας.</h5>
-				<h5>Μην επαναχρησιμοποιείτε μάσκες.</h5>
+	<div class="row" id="footer">
+	<div class="col-md-12">
+		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+			<a href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
 		</div>
+		<script src="donation.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</div>
-	<br><br><br><br>
-	<footer class="footer">Copyright by: <cite title="Source Title">Νικηφόρος Ιωαννίδης</cite></footer>
 </body>
 </html>
