--- a/contact_us.html
+++ b/contact_us.html
@@ -8,71 +8,106 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+ 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-dark bg-dark sticky-top">
-		<a class="navbar-brand" href="#">
-			<img id="logo" src="logo.jpg"/>
-			<div class="coronovirus">
-				<h3>FIGHT <br> Coronavirus</h3>
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+		<ul class="navbar mr-auto">
+			<a class="navbar-brand" href="#">
+				<img id="logo" src="logo.png"/>
+			</a>
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarMenu">
+				<ul class="navbar-nav mr-auto">
+					<div class="nav-item">
+						<a href="Index.html" class="nav-link">Home</a>
+					</div>
+					<div class="nav-item">
+						<a href="events.html" class="nav-link">Events</a>
+					</div>
+					<div class="nav-item">
+					<a href="donation_page.html" class="nav-link">Donation</a>
+					</div>
+					<div class="nav-item">
+						<a href="about_us.html" class="nav-link">About us</a>
+					</div>
+						<a href="contact_us.html" class="nav-link">Contact us</a>
+					</div>
+				</ul>
 			</div>
-		</a>
-			<div class="subnav">
-				<div id="home"> <a href="Index.html">Home</a> </div>
-				<div id="events"> <a href="events.html">Events</a></div>
-				<div id="donation"> <a href="donation_page.html">Donation</a></div>
-				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
-				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
-				<script src="donation.js"></script>
-        <a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></i></a><br>
-				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a><br>
-				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a><br>
-        <select class="selectpicker" data-width="fit" onchange="location = this.value;">
-					<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="contact_us.html">English</option>
-				 	<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="contact_usGr.html">Ελληνικά</option>
-				</select>
+		</ul>
+		<div id="buttonsLanguage" class="row">
+			<ul class="navbar mr-auto">
+				<div class="col-md-1">
+					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-1">
+					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+				</div>
+				<div class="col-md-3">
+					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
+						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="contact_us.html">English</option>
+						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="contact_usGr.html">Ελληνικά</option>
+					</select>
+				</div>
+				<div class="offset-1">
+				</div>
+
 			</div>
+		</ul>
 	</nav>
-	<div class="col-md-4">
-    <div id="contactUsHeader">
-      <h1>Contact us</h1>
-    </div>
-    <div id="contactUsText">
-      <p><b>Address: </b>Fidipidou 13, Athens</p>
-      <p><b>Phone: </b>2107776565</p>
-      <p><b>Fax: </b>2107776556</p>
-      <br><br>
-      <h3>Email form:</h3>
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+	<div class="row">
+		<div class="col-md-6">
+	        <h1>Contact us</h1>
+    	    <p><b>Address: </b>Fidipidou 13, Athens</p>
+			<p><b>Phone: </b>2107776565</p>
+			<p><b>Fax: </b>2107776556</p>
+			<br>
+			<img src="googleMaps.PNG"/>
+		</div>
+		<div class="col-md-6">
+			<h3>Email form:</h3>
+			<form>
+				<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+				</div>
+				<div class="form-group">
+				<label for="exampleInputPassword1">Your message</label>
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text your message here...">
+				</div>
+				<div class="form-group form-check">
+				<input type="checkbox" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">I'm not a robot</label>
+				</div>
+				<div class="form-group form-check">
+				<input type="checkbox" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">Send verification sms</label>
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Your message</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text your message here...">
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">I'm not a robot</label>
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Send verification sms</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-    </div>
-		<div class="col-md-6" id="maps">
-      <img src="googleMaps.PNG"/>
-    </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br>
-    <footer class="footerDonationPage">Copyright by: <cite title="Source Title">Nikiforos Ioannidis</cite></footer>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="footer-copyright text-center py-3">© 2020 Copyright:
+				<a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+			</div>
+			<script src="donation.js"></script>
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		</div>
+	</div>
 </body>
 </html>
+
